V1 completed